# standardfile

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  docker-compose.yml
backend_core/: Cargo.toml  README.md
backend_core/src/: lib.rs  models.rs
backend_mysql/: Cargo.toml  README.md
backend_mysql/migrations/2018-02-11-032341_create_tables/: down.sql  up.sql
backend_mysql/src/: lib.rs
backend_sqlite/: Cargo.toml  README.md
backend_sqlite/migrations/2018-02-11-032341_create_tables/: up.sql
backend_sqlite/src/: lib.rs
docker/: Dockerfile-db  Dockerfile-standardfile
docker/bins/: docker-mariadb-healthcheck
docker/environments/: .env.app.dev  .env.db.dev
docs/: APIs.md
migrations/2018-02-11-032341_create_tables/: up.sql
src/: auth.rs  db.rs  env.rs  items.rs  lib.rs  main.rs  models.rs  pwdetails.rs  schema.rs  service.rs  tokens.rs  users.rs  util.rs
src/api/: mod.rs
src/api/auth/: change_pw.rs  mod.rs  params.rs  register.rs  sign_in.rs  update.rs
src/api/items/: mod.rs  pagination.rs  sync.rs
src/db/: mod.rs  sqlite.rs
standardfile/: Cargo.toml  README.md
standardfile/src/: db.rs  env.rs  items.rs  lib.rs  main.rs  pwdetails.rs  service.rs  tokens.rs  users.rs  util.rs
standardfile/src/api/: errors.rs  identity.rs  mod.rs  models.rs  pagination.rs  timestamp.rs
standardfile/src/api/auth/: change_pw.rs  mod.rs  params.rs  register.rs  sign_in.rs  update.rs
standardfile/src/api/items/: mod.rs  pagination.rs  sync.rs  timestamp.rs
