[package]
name = "standardfile"
version = "0.1.0"
authors = ["Alexander Dean <dstar@slackless.com>"]
description = "A Rust StandardFile server implementation."
readme = "README.md"
license = "GPL-3.0"
keywords = ["notes","server","standardfile","self","hosted"]

[dependencies]
router = "0.5"
iron = "0.5"
hyper-native-tls = "0.2"
clap = "2.20"
uuid = { version = "0.2", features = ["serde", "v4"] }
chrono = { version = "0.2", features = ["serde", "rustc-serialize"] }
rusqlite = { version = "0.9", features = ["chrono"] }
jsonwebtoken = "1"
rustc-serialize = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
urlencoded = "0.5"
rust-crypto = "0.2"
