[package]
name = "standardfile"
version = "0.1.0"
authors = ["Alexander Dean <dstar@slackless.com>"]
description = "A Rust StandardFile server implementation."
readme = "README.md"
license = "GPL-3.0"
keywords = ["notes","server","standardfile","self","hosted"]

[dependencies]
dotenv = "0.10"
clap = { version = "2.20", features = ["color"] }
uuid = { version = "0.5", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
diesel = { version = "1.1", features = ["sqlite", "chrono", "extras"] }
jsonwebtoken = "4"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rust-crypto = "0.2"
bcrypt = "0.1"
base64 = "0.9"
log = "0.4"
env_logger = "0.5"
gotham = "0.2"
gotham_derive = "0.2"
hyper = "0.11"
futures = "0.1" # Should upgrade soon
mime = "0.3"