[package]
name = "standardfile"
version = "0.2.0"
authors = ["Alexander Dean <dstar@slackless.com>"]
description = "A Rust StandardFile server implementation."
readme = "README.md"
license = "GPL-3.0"
keywords = ["notes","server","standardfile","self","hosted"]
workspace = ".."

[dependencies]
dotenv = "0.11"
clap = { version = "2.20", features = ["color"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
diesel = { version = "1.1", features = ["chrono", "extras"] }
jsonwebtoken = "4"
serde = "1.0.34" # need at least this for flatten.
serde_derive = "1.0"
serde_json = "1.0"
rust-crypto = "0.2"
bcrypt = "0.2"
base64 = "0.9"
log = "0.4"
env_logger = "0.5"
cfg-if = "0.1.2"

actix = "0.5"
actix-web = "0.5"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
r2d2 = "0.8"


backend_core = { path = "../backend_core" }
backend_sqlite = { path = "../backend_sqlite", optional = true }
backend_mysql = { path = "../backend_mysql",  optional = true }

[features]
default = ["sqlite"]
sqlite = ["backend_sqlite"]
mysql = ["backend_mysql"]
